[package]
name = "rubycave"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.28.0", features = ["debug-glam-assert", "bytemuck"] }
rkyv = { version = "0.7.43", features = ["default", "validation"] }
rkyv_codec = { git = "https://github.com/whypet/rkyv_codec.git", features = [
    "tokio-stream",
] }
tokio-util = "0.7.11"
