[package]
name = "rubycave_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rubycave = { path = "../rubycave" }
color-eyre = "0.6.3"
pollster = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.20.1"
winit = "0.30.3"
bytemuck = "1.16.1"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
image = "0.25.2"
thiserror = "1.0.63"

[build-dependencies]
rubycave_mc_assets = { path = "../rubycave_mc_assets" }
glob = "0.3.1"
