[package]
name = "rubycave_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rubycave = { path = "../rubycave" }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.20.1"
winit = "0.30.3"
bytemuck = { version = "1.16.1", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
image = "0.25.2"
thiserror = "1.0.63"
tokio = "1.39.1"
tokio-util = "0.7.11"
tokio-stream = "0.1.15"
futures = "0.3.30"

[build-dependencies]
rubycave_mc_assets = { path = "../rubycave_mc_assets" }
glob = "0.3.1"
