[package]
name = "rubycave_client"
version = "0.1.0"
edition = "2021"

[dependencies]
rubycave = { path = "../rubycave" }
color-eyre = "0.6.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.20.1"
winit = "0.30.4"
bytemuck = { version = "1.16.3", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
image = "0.25.2"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
] }
tokio-stream = "0.1.15"
futures = "0.3.30"

[build-dependencies]
rubycave_mc_assets = { path = "../rubycave_mc_assets" }
glob = "0.3.1"
