[package]
name = "rubycave_server"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.30"
rubycave = { path = "../rubycave" }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
